[package]
authors = ["realityone <realityone@me.com>"]
name = "libnetkeeper"
version = "0.2.1"

[dependencies]
aes_frast = "0.1.2"
byteorder = "1.1.0"
chrono = "0.4.0"
linked-hash-map = "0.3.0"
md4 = "0.4.1"
md5 = "0.4.0"
rand = "0.3.15"
sha1 = "0.6.0"

[features]
default = [
    "netkeeper",
    "netkeeper4",
    "singlenet",
    "drcom",
    "ghca",
    "srun3k",
    "ipclient",
]
drcom = []
ghca = []
ipclient = []
netkeeper = []
netkeeper4 = []
singlenet = []
srun3k = []

[lib]
name = "netkeeper"
