[package]
authors = ["realityone <realityone@me.com>"]
name = "libnetkeeper"
version = "0.2.1"

[dependencies]
aes_frast = "0.1.5"
byteorder = "1.4.3"
chrono = "0.4.19"
digest = "0.10.1"
linked-hash-map = "0.5.4"
md4 = "0.10.0"
md5 = "0.7.0"
rand = "0.8.4"
sha1 = "0.10.0"

[features]
default = [
    "netkeeper",
    "netkeeper4",
    "singlenet",
    "drcom",
    "ghca",
    "srun3k",
    "ipclient",
]
drcom = []
ghca = []
ipclient = []
netkeeper = []
netkeeper4 = []
singlenet = []
srun3k = []

[lib]
name = "netkeeper"
