[package]
name = "libnetkeeper"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["realityone <realityone@me.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/realityone/libnetkeeper"

[dependencies]
aes_frast = "0.2.2"
byteorder = "1.5.0"
linked-hash-map = { version = "0.5.6", optional = true }
md4 = "0.11.0"
md5 = "0.8.1"
rand = { version = "0.10.2", optional = true }
sha1 = "0.11.0"

[features]
default = [
    "netkeeper",
    "netkeeper4",
    "singlenet",
    "drcom",
    "ghca",
    "srun3k",
    "ipclient",
]
drcom = ["dep:rand"]
ghca = []
ipclient = []
netkeeper = ["dep:linked-hash-map"]
netkeeper4 = ["netkeeper"]
singlenet = []
srun3k = []

[lib]
name = "netkeeper"

[lints.rust]
unsafe_code = "forbid"
